--- a/app.wxss
+++ b/app.wxss
@@ -49,6 +49,50 @@ image {
   border-radius: 20rpx;
 }
 
+/* 文章 */
+
+.layout {
+  width: 100%;
+  border: 0rpx solid red;
+  padding-bottom: 40rpx;
+}
+
+.layout_maxdiv {
+  width: 100%;
+  border: 0rpx solid black;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40rpx;
+}
+
+.layout_imgdiv {
+  width: 40%;
+}
+
+.layout_zhongdiv {
+  flex: 1;
+  padding-left: 20rpx;
+}
+
+.layout_title {
+  width: 100%;
+  line-height: 40rpx;
+  font-size: 30rpx;
+  font-weight: 700;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  padding-top: 20rpx;
+}
+
+.tag_maxdiv {
+  width: 90%;
+}
+
+
+
 /* 底部 */
 .footer {
   width: 100%;
