--- a/pages/details/details.wxss
+++ b/pages/details/details.wxss
@@ -2,127 +2,11 @@ page {
   background-color: #F2F3F5;
 }
 
-.tag_maxdiv {
-  width: 90%;
-  float: left;
-  margin-top: 20%;
+.layout{
+  padding: 0 40rpx;
+  padding-top: 40rpx;
 }
 
-.layout {
-  width: 100%;
-  border: 0rpx solid red;
-  float: left;
-  padding-bottom: 40rpx;
-}
-
-.layout_maxdiv {
-  width: 100%;
-  height: 200rpx;
-  border: 0rpx solid black;
-  float: left;
-  margin-top: 20rpx;
+.layout_maxdiv{
   background-color: white;
-  border-radius: 10rpx;
-}
-
-.layout_imgdiv {
-  height: 100%;
-  width: 40%;
-  border-radius: 10rpx;
-  float: left;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.layout_img {
-  width: 90%;
-  height: 90%;
-}
-
-.layout_wz {
-  height: 20%;
-  width: 21%;
-  text-align: center;
-  color: white;
-  border: 1rpx solid white;
-  position: relative;
-  top: 70%;
-  left: 70%;
-  font-size: 18rpx;
-  line-height: 32rpx;
-  margin-right: 10rpx;
-  border-radius: 4rpx;
-}
-
-.layout_zhongdiv {
-  width: 58%;
-  height: 100%;
-  float: right;
-
-}
-
-.layout_title {
-  width: 95%;
-  float: left;
-  line-height: 40rpx;
-  font-size: 30rpx;
-  font-weight: 700;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 2;
-  margin-top: 10rpx;
-}
-
-.layout_date {
-  float: left;
-  color: #999999;
-  font-size: 20rpx;
-  line-height: 20rpx;
-  margin-top: 10rpx;
-
-}
-
-/* 导航 */
-.nav_div {
-  position: fixed;
-  left: 20rpx;
-  width: 180rpx;
-  height: 60rpx;
-  border-radius: 40rpx;
-  background-color: white;
-  opacity: 0.6;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav_maxdiv {
-  width: 70%;
-  height: 100%;
-  border: 0rpx solid black;
-}
-
-.nav_iocndiv {
-  float: left;
-  height: 100%;
-  width: calc(100%/2);
-  line-height: 74rpx;
-  font-size: 44rpx;
-  text-align: center;
-
-}
-
-.iocn {
-  height: 100%;
-  float: left;
-}
-
-.side {
-  float: right;
-  height: 50%;
-  margin-top: 16rpx;
-  border: 1rpx solid #83919D;
 }
